# aws-waf-security-automations

./: .gitignore  CHANGELOG.md
deployment/: build-s3-dist.sh  run-unit-tests.sh
source/access_handler/: access_handler.py  pyproject.toml
source/access_handler/test/: test_access_handler.py
source/custom_resource/: custom_resource.py  pyproject.toml  resource_manager.py
source/custom_resource/test/: conftest.py
source/helper/: helper.py  pyproject.toml
source/helper/test/: conftest.py
source/ip_retention_handler/: pyproject.toml  remove_expired_ip.py  set_ip_retention.py
source/ip_retention_handler/test/: test_remove_expired_ip.py  test_set_ip_retention.py
source/log_parser/: add_athena_partitions.py  log_parser.py  partition_s3_logs.py  pyproject.toml
source/log_parser/test/: test_add_athena_partitions.py  test_build_athena_queries.py  test_log_parser.py  test_partition_s3_logs.py
source/reputation_lists_parser/: pyproject.toml  reputation_lists.py
source/reputation_lists_parser/test/: test_reputation_lists_parser.py
source/timer/: pyproject.toml  timer.py
