[tool.poetry]
package-mode = false
name = "helper"

[tool.poetry.dependencies]
python = "~3.12"
requests = "^2.32.3"
backoff = "^2.2.1"
aws-lambda-powertools = "~3.2.0"


[tool.poetry.group.dev.dependencies]
moto = "^4.1.4"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-runner = "^6.0.0"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.1"
boto3 = "^1.35.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
